Add vice mod support
Added support for the Vice mod and patches. This required the app to switch between different sets of digimon and evolution criteria. The vice mode is always required for either or both panjyamon and weregarurumon patch to be installed. The user can switch beteen original and vice mod and when vice mod is enabled it is possible to dis- or enable the optional patches. Throughout all of the evolution calculation logic it will change the relevant evolutions and digimon available.

--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Buttons/DefaultButtonStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Buttons/DefaultButtonStyle.xaml
@@ -17,6 +17,10 @@
                             <Setter TargetName="OuterBorder" Property="BorderBrush" Value="#060100" />
                             <Setter TargetName="InnerBorder" Property="BorderBrush" Value="#6789A5" />
                         </Trigger>
+
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Opacity" Value="0.5"/>
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
