--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Buttons/StretchContentButtonStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Buttons/StretchContentButtonStyle.xaml
@@ -29,6 +29,10 @@
                                     Property="BorderBrush"
                                     Value="#6789A5" />
                         </Trigger>
+
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Opacity" Value="0.5"/>
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
