--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -2,7 +2,6 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:conversion="clr-namespace:DigimonWorld.Frontend.WPF.Conversion"
-             xmlns:enums="clr-namespace:Shared.Enums;assembly=Shared"
              xmlns:system="clr-namespace:System;assembly=System.Runtime">
     <Application.Resources>
 
@@ -15,7 +14,6 @@
 
             <system:Int32 x:Key="DefaultTooltipDelay">750</system:Int32>
             <system:Double x:Key="DefaultButtonHeight">40</system:Double>
-            <system:Double x:Key="DefaultTextHeightSpacing">16</system:Double>
             
             <system:Double x:Key="NavigationButtonWidth">50</system:Double>
             <system:Double x:Key="NavigationButtonTextWidth">80</system:Double>
@@ -27,7 +25,7 @@
 
             <conversion:EnumToImageConverter x:Key="EnumToImageConverter" />
 
-            <GridLength x:Key="DefaultTextBoxGridRowHeight">30</GridLength>
+            <system:Double x:Key="DefaultTextBoxHeight">30</system:Double>
 
             <Style TargetType="TextBlock">
                 <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
