--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/EvolutionCalculator/EvolutionCalculatorUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/EvolutionCalculator/EvolutionCalculatorUserControl.xaml
@@ -62,19 +62,19 @@
                                     <ColumnDefinition Width="auto" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
-                                    <RowDefinition Height="{StaticResource DefaultTextBoxGridRowHeight}" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
 
                                 <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource DefaultLabelStyle}"
