--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/DefaultTextboxStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/DefaultTextboxStyle.xaml
@@ -7,7 +7,7 @@
             <Setter Property="Foreground" Value="#D6D6D8" />
             <Setter Property="BorderBrush" Value="#6987A3" />
             <Setter Property="BorderThickness" Value="2" />
-            <Setter Property="MinHeight" Value="{StaticResource DefaultTextBoxHeight}" />
+            <Setter Property="Height" Value="{StaticResource DefaultTextBoxHeight}" />
             <Setter Property="Margin" Value="1" />
             <Setter Property="Padding" Value="0" />
             <Setter Property="HorizontalContentAlignment" Value="Left" />
