--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -65,7 +65,7 @@
 
                             <Border Grid.Column="0" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="1.5">
                                 <Border CornerRadius="3" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
-                                    <StackPanel  Orientation="Vertical" VerticalAlignment="Center">
+                                    <StackPanel  Orientation="Vertical" VerticalAlignment="Center" Margin="0,10">
                                         <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
                                                 Height="40"
                                                 Width="150"
@@ -94,6 +94,13 @@
                                                 Content="MOD / PATCHES"
                                                 Command="{Binding ShowEvolutionConfigurationSectionCommand}"
                                                 Tag="{Binding EvolutionConfigurationSectionIsSelected}" />
+                                        <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                                Height="40"
+                                                Width="150"
+                                                HorizontalAlignment="Center"
+                                                Content="EMULATOR LINK"
+                                                Command="{Binding ShowEmulatorLinkConfigurationSectionCommand}"
+                                                Tag="{Binding EmulatorLinkConfigurationSectionIsSelected}" />
                                     </StackPanel>
                                 </Border>
                             </Border>
