--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/MusicPlayerConfigurationSection.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/MusicPlayerConfigurationSection.xaml
@@ -55,8 +55,9 @@
             <Label Grid.Row="4" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="When closing:" Margin="0, 0, 5, 0" />
             <TextBox Name="Volume" Grid.Row="0" Grid.Column="1" Style="{StaticResource DefaultTextBoxStyle}"
                      HorizontalAlignment="Left"
-                     Height="{StaticResource OptionHeight}"
-                     Width="{StaticResource OptionWidth}">
+                     Width="73"
+                     Height="23"
+                     Margin="0">
                 <TextBox.Text>
                     <Binding Path="Volume" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
                         <Binding.ValidationRules>
